# owi-metadatabase-sdk

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  GitVersion.yml  README.md  REFACTOR_PLAN.md  index.html  invoke.yaml  mkdocs.yml  pyproject.toml  release.sh  zensical.toml
.github/: README.md  copilot-instructions.md
.github/scripts/: release_version.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release-on-merge.yml  release-preview.yml  release.yml
.hypothesis/constants/: 0a7aa8bca352b11b  0cc7d87519ff937d  1148fcc0cd234725  197a90ce5afa6898  20dc3d8cb4504c44  27b5375738837471  34ef93bb31801ccd  3e3491a7c7ac772c  62f4d4605b451866  6809f4f3dba6d629  683b6fb9d8a87fe2  78a860763c9064c6  7eade268f94c1cd1  82d5ee146272dd80  87987d0a83e87857  880fe510a8780336  8b0a52678234eb4c  9d98f92769c1a57c  9e6a09113723fadb  a61d6fc3f263bd43  c3c8e0778909d550  d25ea5ed402904c8  da39a3ee5e6b4b0d  e2abcaabed2a7228  ea346ab051ce1c05  f02fdeee726db226  f38a84c2891c15d7  f41ce74fc4d24c66  f9b35173c55cad99
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/about/authors/: index.html
0.1.1/about/changelog/: index.html
0.1.1/about/license/: index.html
0.1.1/api/: index.html
0.1.1/api/geometry/: index.html
0.1.1/api/io/: index.html
0.1.1/api/locations/: index.html
0.1.1/api/utils/: index.html
0.1.1/development/contributing/: index.html
0.1.1/development/doctest_guide/: index.html
0.1.1/development/documentation/: index.html
0.1.1/development/namespace_packages/: index.html
0.1.1/development/release/: index.html
0.1.1/development/testing/: index.html
0.1.1/getting-started/installation/: index.html
0.1.1/getting-started/migration/: index.html
0.1.1/getting-started/quickstart/: index.html
0.1.1/search/: search_index.json
0.1.1/user-guide/authentication/: index.html
0.1.1/user-guide/geometry/: index.html
0.1.1/user-guide/locations/: index.html
0.1.1/user-guide/overview/: index.html
0.1.5/: 404.html  objects.inv  search.json
0.1.5/about/changelog/: index.html
0.1.5/about/license/: index.html
0.1.5/development/contributing/: index.html
0.1.5/development/doctest_guide/: index.html
0.1.5/development/documentation/: index.html
0.1.5/explanation/data-model/: index.html
0.1.5/explanation/namespace-packages/: index.html
0.1.5/how-to/: index.html
0.1.5/how-to/install/: index.html
0.1.5/how-to/query-geometry/: index.html
0.1.5/reference/: index.html
0.1.5/tutorials/first-query/: index.html
0.1.6/: search.json  sitemap.xml
0.1.6/about/license/: index.html
0.1.6/development/testing/: index.html
0.1.6/explanation/data-model/: index.html
0.1.6/how-to/authenticate/: index.html
0.1.6/how-to/filter-data/: index.html
0.1.6/how-to/query-locations/: index.html
0.1.6/reference/: index.html
0.1.6/tutorials/: index.html
0.1.6/tutorials/first-query/: index.html
0.1.6/tutorials/processing-geometry/: index.html
0.1.7/: search.json
0.1.7/development/contributing/: index.html
0.1.7/how-to/migrate/: index.html
0.1.7/how-to/process-multiple-turbines/: index.html
0.1.7/how-to/process-single-turbine/: index.html
archive/fatigue/: test_io.py
archive/results/: io.py
archive/soil/: conftest.py  test_io.py
archive/soil/processing/: test_soil_pp.py
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/about/authors/: index.html
dev/about/changelog/: index.html
dev/about/license/: index.html
dev/api/: index.html
dev/api/geometry/: index.html
dev/api/io/: index.html
dev/api/locations/: index.html
dev/api/utils/: index.html
dev/development/cicd/: index.html
dev/development/contributing/: index.html
dev/development/doctest_guide/: index.html
dev/development/documentation/: index.html
dev/development/namespace_packages/: index.html
dev/development/release/: index.html
dev/development/testing/: index.html
dev/explanation/: index.html
dev/explanation/architecture/: index.html
dev/explanation/extensions/: index.html
dev/explanation/namespace-packages/: index.html
dev/getting-started/installation/: index.html
dev/getting-started/migration/: index.html
dev/getting-started/quickstart/: index.html
dev/how-to/: index.html
dev/how-to/authenticate/: index.html
dev/how-to/filter-data/: index.html
dev/how-to/install/: index.html
dev/how-to/migrate/: index.html
dev/how-to/process-multiple-turbines/: index.html
dev/how-to/process-single-turbine/: index.html
dev/how-to/query-geometry/: index.html
dev/how-to/query-locations/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
dev/tutorials/processing-geometry/: index.html
docs/: conf.py  index.md
docs/about/: authors.md  changelog.md  license.md
docs/api/: geometry.md  index.md  io.md  locations.md
docs/development/: cicd.md  contributing.md  doctest_guide.md  documentation.md  namespace_packages.md  release.md  testing.md
docs/explanation/: architecture.md  data-model.md  extensions.md  index.md  namespace-packages.md
docs/getting-started/: installation.md  migration.md  quickstart.md
docs/how-to/: authenticate.md  filter-data.md  index.md  install.md  migrate.md  process-multiple-turbines.md  process-single-turbine.md  query-geometry.md  query-locations.md
docs/reference/: index.md
docs/reference/api/: geometry.md  (+2 more)
docs/tutorials/: first-query.md  index.md  processing-geometry.md
docs/user-guide/: authentication.md  geometry.md  locations.md  overview.md
examples/: basic_example.ipynb  soilapi_example.ipynb
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/search/: search_index.json
src/owimetadatabase_preprocessor/: __init__.py
tasks/: __init__.py  ado.py  cruft.py  docs.py  notebook.py  performance.py  quality.py  search.py  system.py  test.py
tests/: conftest.py  doctest_fixtures.py  test_imports.py  test_io.py  test_namespace.py  test_packaging.py  test_release_version.py
tests/_utils/: test_utils.py
tests/geometry/: conftest.py  test_io.py  test_processing.py  test_structures.py
tests/locations/: test_io.py
(+77 files in other folders)
