[project]
name = "owi-metadatabase"
version = "0.11.0"
description = "Core SDK for OWI-Lab metadatabase: geometry and location data"
authors = [{ name = "arsmlnkv", email = "arsen.melnikov@vub.be" },
           { name = "Pietro D'Antuono", email = "pietro.dantuono@vub.be" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["owimetadatabase", "offshore wind", "geometry", "locations"]
requires-python = ">=3.9,<3.15"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests >=2.32.0",
    "numpy >=1.26.0,<2.0.0 ; python_version < '3.11'",
    "numpy >=2.0.0 ; python_version >= '3.11'",
    "pandas >=2.0.0",
    "pyproj >=3.6.0,<3.7.0 ; python_version < '3.10'",
    "pyproj >=3.7.0,<3.7.2 ; python_version >= '3.10' and python_version < '3.11'",
    "pyproj >=3.7.2 ; python_version >= '3.11'",
    "tqdm >=4.66.0",
    "plotly >=5.19.0",
    "matplotlib ==3.9.4 ; python_version < '3.10'",
    "matplotlib >=3.10.0 ; python_version >= '3.10'",
]


[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "docs"},
    {include-group = "dev-tools"},
]
test = [
    "pytest >=8.4.0",
    "pytest-mock >=3.15.0",
    "pytest-xdist >=3.7.0",
    "pytest-clarity >=1.0.0",
    "pytest-cov >=7.0.0",
    "requests-mock >=1.12.1",
    "hypothesis >=6.100.0"
]
lint = [
    "ruff >=0.12.9"
]
typing = [
    "ty >=0.0.14",
    "pandas-stubs >=2.0.0,<2.2.3.241009 ; python_version < '3.10'",
    "pandas-stubs >=2.2.3.241009 ; python_version >= '3.10'",
    "types-requests >=2.32.0",
]
docs = [
    "mkdocs >=1.6.0",
    "mkdocs-material >=9.5.0",
    "mkdocstrings[python] >=0.27.0",
    "mkdocs-jupyter >=0.25.0",
    "mkdocs-git-revision-date-localized-plugin >=1.3.0",
    "mkdocs-minify-plugin >=0.8.0",
    "mike >=2.0.0",
]
dev-tools = [
    "invoke >=2.2.0",
    "pre-commit >=3.0.0",
    "deptry >=0.23.1"
]
# Future extension dependency groups
fatigue = [
    # Will depend on owi-metadatabase-fatigue when available
]
soil = [
    # Will depend on owi-metadatabase-soil when available
]


[project.urls]
homepage = "https://owi-lab.github.io/owi-metadatabase-sdk/"
repository = "https://github.com/OWI-Lab/owi-metadatabase-sdk"
documentation = "https://owi-lab.github.io/owi-metadatabase-sdk/"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
    "--cov=src/owi/metadatabase",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--doctest-glob=*.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
    "IGNORE_EXCEPTION_DETAIL",
]


[tool.ruff]
line-length = 120
target-version = "py39"


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205"
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.isort]
known-first-party = ["owi.metadatabase"]


[tool.mypy]
python_version = "3.9"
mypy_path = ["src/", "tests/"]
explicit_package_bases = true

pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true

ignore_missing_imports = true
follow_imports = "silent"

files = ["src/", "tests/"]


[[tool.mypy.overrides]]
module = "owi.metadatabase.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "matplotlib.*,plotly.*,pyproj.*,groundhog.*"
ignore_missing_imports = true


[tool.deptry.per_rule_ignores]
DEP002 = ["plotly", "matplotlib", "pyproj", "tqdm"]
DEP003 = ["owi"]


[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi"]
