[project]
name = "owi-metadatabase"
version = "0.1.6"
description = "Core SDK for OWI-Lab metadatabase: geometry and location data"
authors = [{ name = "arsmlnkv", email = "arsen.melnikov@vub.be" },
           { name = "Pietro D'Antuono", email = "pietro.dantuono@vub.be" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["owimetadatabase", "offshore wind", "geometry", "locations"]
requires-python = ">=3.9,<3.15"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "requests >= 2.32.0",
    "numpy >= 1.26.0, < 2.0.0 ; python_version < '3.11'",
    "numpy >= 2.0.0 ; python_version >= '3.11'",
    "pandas >= 2.0.0",
    "tqdm >= 4.66.0",
    "plotly >= 5.19.0",
    "matplotlib == 3.9.4 ; python_version < '3.10'",
    "matplotlib >= 3.10.0 ; python_version >= '3.10'",
]

[project.optional-dependencies]
soil = [
    "owi-metadatabase-soil >=0.1.1",
]
results = [
    "owi-metadatabase-results >=0.1.2",
]
shm = [
    "owi-metadatabase-shm >=0.1.0",
]


[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typing"},
    {include-group = "docs"},
    {include-group = "dev-tools"},
]
test = [
    "pytest >=8.4.0",
    "pytest-mock >=3.15.0",
    "pytest-xdist >=3.7.0",
    "pytest-clarity >=1.0.0",
    "pytest-cov >=7.0.0",
    "requests-mock >=1.12.1",
    "hypothesis >=6.100.0"
]
lint = [
    "ruff >=0.12.9"
]
typing = [
    "ty >=0.0.14",
    "pandas-stubs >=2.0.0,<2.2.3.241009 ; python_version < '3.10'",
    "pandas-stubs >=2.2.3.241009 ; python_version >= '3.10'",
    "types-requests >=2.32.0",
]
docs = [
    "zensical >=0.0.28 ; python_version >= '3.10'",
    "mkdocstrings-python >=1.0.0 ; python_version >= '3.10'",
    "griffe >=1.14.0,<2.0.0 ; python_version >= '3.10'",
    "pymdown-extensions >=10.0",
]
dev-tools = [
    "bump2version >=1.0.1",
    "invoke >=2.2.0",
    "pre-commit >=3.0.0",
    "deptry >=0.23.1"
]

[project.urls]
homepage = "https://owi-lab.github.io/owi-metadatabase-sdk/"
repository = "https://github.com/OWI-Lab/owi-metadatabase-sdk"
documentation = "https://owi-lab.github.io/owi-metadatabase-sdk/"


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning"
]
testpaths = ["tests", "src"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--import-mode=importlib",
    "--strict-markers",
    "--tb=short",
    "--cov=src/owi/metadatabase",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--doctest-glob=*.md",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "NUMBER",
    "IGNORE_EXCEPTION_DETAIL",
]


[tool.ruff]
line-length = 120
target-version = "py39"


[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D205"
]


[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.isort]
known-first-party = ["owi.metadatabase"]


[tool.deptry.per_rule_ignores]
DEP002 = ["plotly", "matplotlib", "pyproj", "tqdm", "owi-metadatabase-soil",
          "owi-metadatabase-results", "owi-metadatabase-shm"]
DEP003 = ["owi"]
DEP004 = ["owi"]


[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/owi"]


# [[tool.uv.index]]
# name = "testpypi"
# url = "https://test.pypi.org/simple"
# explicit = true

# [tool.uv.sources]
# owi-metadatabase-soil = { index = "testpypi" }
# owi-metadatabase-fatigue = { index = "testpypi" }
